--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,6 +2,8 @@ plugins {
     id 'com.android.application'
 }
 
+apply plugin: "realm-android"
+
 android {
     namespace 'edu.msoe.healthfinal'
     compileSdk 33
